--- a/templates/home/user_statistics.html
+++ b/templates/home/user_statistics.html
@@ -26,36 +26,28 @@
     <div class="container">
         <h2 class="text-center mb-4">Ваша статистика</h2>
 
-                <div class="container">
-            <div class="d-flex justify-content-center">
-                <div class="row mb-5 w-100 justify-content-center">
-                    <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
-                        <div class="card text-center h-100 shadow-sm">
-                            <div class="card-body">
-                                <div class="stat-number text-primary">{{ user_stats.total_attempts }}</div>
-                                <div class="stat-label">Всего попыток</div>
-                            </div>
+                            <div class="d-flex justify-content-center">
+                <div class="row text-center w-100 justify-content-center">
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                        <div class="p-4 bg-white rounded shadow-sm">
+                            <div class="stat-number">{{ global_stats.total_attempts|default:"0" }}</div>
+                            <div class="stat-label">Всего попыток</div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
-                        <div class="card text-center h-100 shadow-sm">
-                            <div class="card-body">
-                                <div class="stat-number text-success">{{ user_stats.correct_attempts }}</div>
-                                <div class="stat-label">Правильных решений</div>
-                            </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                        <div class="p-4 bg-white rounded shadow-sm">
+                            <div class="stat-number">{{ global_stats.total_users|default:"1" }}</div>
+                            <div class="stat-label">Пользователей</div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
-                        <div class="card text-center h-100 shadow-sm">
-                            <div class="card-body">
-                                <div class="stat-number text-info">{{ user_stats.accuracy }}%</div>
-                                <div class="stat-label">Точность</div>
-                            </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                        <div class="p-4 bg-white rounded shadow-sm">
+                            <div class="stat-number">{{ global_stats.overall_accuracy|default:"0" }}%</div>
+                            <div class="stat-label">Точность решений</div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
         <div class="card border-0 shadow-lg mb-5">
             <div class="card-header bg-primary text-white">
