--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/">MathExamPrep</a>
+            <a class="navbar-brand fw-bold" href="/">ULearnEGE</a>
             <div class="d-flex">
             </div>
         </div>
@@ -45,29 +45,25 @@
                 <p class="text-muted">Наши пользователи уже решили</p>
             </div>
 
-            <div class="row text-center">
-                <div class="col-md-3 col-6 mb-4">
-                    <div class="p-4 bg-white rounded shadow-sm">
-                        <div class="stat-number">{{ global_stats.total_attempts|default:"0" }}</div>
-                        <div class="stat-label">Всего попыток</div>
+                        <div class="d-flex justify-content-center">
+                <div class="row text-center w-100 justify-content-center">
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                        <div class="p-4 bg-white rounded shadow-sm">
+                            <div class="stat-number">{{ global_stats.total_attempts|default:"0" }}</div>
+                            <div class="stat-label">Всего попыток</div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-6 mb-4">
-                    <div class="p-4 bg-white rounded shadow-sm">
-                        <div class="stat-number">{{ global_stats.total_users|default:"1" }}</div>
-                        <div class="stat-label">Пользователей</div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                        <div class="p-4 bg-white rounded shadow-sm">
+                            <div class="stat-number">{{ global_stats.total_users|default:"1" }}</div>
+                            <div class="stat-label">Пользователей</div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-6 mb-4">
-                    <div class="p-4 bg-white rounded shadow-sm">
-                        <div class="stat-number">{{ global_stats.overall_accuracy|default:"0" }}%</div>
-                        <div class="stat-label">Точность решений</div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-6 mb-4">
-                    <div class="p-4 bg-white rounded shadow-sm">
-                        <div class="stat-number">{{ global_stats.total_score|default:"0" }}</div>
-                        <div class="stat-label">Всего баллов</div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                        <div class="p-4 bg-white rounded shadow-sm">
+                            <div class="stat-number">{{ global_stats.overall_accuracy|default:"0" }}%</div>
+                            <div class="stat-label">Точность решений</div>
+                        </div>
                     </div>
                 </div>
             </div>
