--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>MathExamPrep</h5>
+                    <h5>ULearnEGE</h5>
                     <p class="text-muted">Подготовка к ЕГЭ по математике</p>
                 </div>
                 <div class="col-md-6 text-end">
