--- a/templates/home/user_statistics.html
+++ b/templates/home/user_statistics.html
@@ -13,9 +13,6 @@
         <div class="container">
             <a class="navbar-brand" href="/">ULearnEGE</a>
             <div>
-                <a href="{% url 'choose_mode' %}" class="btn btn-outline-light me-2">
-                    <i class="bi bi-arrow-left"></i> Назад
-                </a>
                 <a href="{% url 'global_statistics' %}" class="btn btn-light">
                     <i class="bi bi-globe"></i> Общая статистика
                 </a>
@@ -37,13 +34,13 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                         <div class="p-4 bg-white rounded shadow-sm">
                             <div class="stat-number">{{ global_stats.total_users|default:"1" }}</div>
-                            <div class="stat-label">Пользователей</div>
+                            <div class="stat-label">Количество пользователей</div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                         <div class="p-4 bg-white rounded shadow-sm">
                             <div class="stat-number">{{ global_stats.overall_accuracy|default:"0" }}%</div>
-                            <div class="stat-label">Точность решений</div>
+                            <div class="stat-label">Средняя точность</div>
                         </div>
                     </div>
                 </div>
@@ -118,7 +115,7 @@
 
         <div class="d-flex justify-content-center mt-5 mb-5">
             <a href="{% url 'choose_mode' %}" class="btn btn-primary btn-lg me-2">
-                <i class="bi bi-play-fill"></i> Продолжить тренировку
+                <i class="bi bi-play-fill"></i> Решать задачи
             </a>
             <a href="{% url 'global_statistics' %}" class="btn btn-outline-secondary btn-lg">
                 <i class="bi bi-globe"></i> Общая статистика
