fix(core): migrations fixed

--- a/templates/home/all_numbers.html
+++ b/templates/home/all_numbers.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-light bg-light mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/">MathExamPrep</a>
+            <a class="navbar-brand" href="/">ULearnEGE</a>
             <a href="/choose/" class="btn btn-outline-primary">
                 <i class="bi bi-arrow-left"></i> Назад к выбору
             </a>
